add a few examples for Fall Code Camp

--- a/fluid/index.html
+++ b/fluid/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html lang="en">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style type="text/css">
-		.flexible {max-width: 100%; height: auto;}
+		img {max-width: 100%;}
 	</style>
 	<body>
-		<div class="container">
-			<img src="hawkeyes.jpg" class="flexible">
+		<div>
+			<img src="hawkeyes.jpg">
 		</div>
 	</body>
 </html>
